--- a/frontend/src/app/shared/components/navbar/navbar.component.html
+++ b/frontend/src/app/shared/components/navbar/navbar.component.html
@@ -32,12 +32,11 @@
               Menú
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Comprar</a></li>
-              <li><a class="dropdown-item" href="#">Carrito</a></li>
+              <li><a class="dropdown-item" href="/Shopping">Carrito</a></li>
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#">Historial de Compras</a></li>
+              <li><a class="dropdown-item" href="/Record">Historial de Compras</a></li>
             </ul>
           </li>
         </ul>
