--- a/frontend/src/app/features/home/home.component.css
+++ b/frontend/src/app/features/home/home.component.css
@@ -36,8 +36,8 @@ body {
 .card {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    min-height: 350px; /* Altura mínima para las cards */
+    height: auto; /* Ajustar la altura automáticamente */
+    min-height: 200px; /* Reducir la altura mínima */
     border: none;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -55,7 +55,62 @@ body {
     flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
-    padding: 15px;
+    padding: 10px; /* Reducir el padding */
+}
+
+.card-body .form-group {
+    margin-bottom: 0.5rem; /* Reducir el margen inferior */
+}
+
+.card-body .form-group label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+}
+
+.card-body .form-group input[type="range"] {
+    width: 100%;
+    -webkit-appearance: none;
+    appearance: none;
+    height: 6px; /* Reducir la altura del control de rango */
+    background: #ddd;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity .2s;
+}
+
+.card-body .form-group input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px; /* Reducir el tamaño del pulgar */
+    height: 15px; /* Reducir el tamaño del pulgar */
+    background: #FFA726;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.card-body .form-group input[type="range"]::-moz-range-thumb {
+    width: 15px; /* Reducir el tamaño del pulgar */
+    height: 15px; /* Reducir el tamaño del pulgar */
+    background: #FFA726;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.card-body .form-check-label {
+    margin-left: 0.5rem;
+}
+
+.card-body .btn {
+    margin-top: 0.5rem; /* Reducir el margen superior */
+    padding: 0.5rem; /* Reducir el padding */
+    font-size: 0.875rem; /* Reducir el tamaño de la fuente */
+}
+
+.card-body .btn-clear {
+    margin-top: 0.5rem;
+    background-color: #dc3545; /* Color rojo */
+    color: white;
 }
 
 .card-img-top {
